--- a/pages/app.scss
+++ b/pages/app.scss
@@ -3,7 +3,7 @@
 @import "./typography.scss";
 
 body {
-	background: #ede9e4;
+	background-color: $background-color;
 	overflow-x: scroll;
 	margin: 0;
 	padding: 0;
